<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-thin"
        android:shadowColor="@android:color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/menu"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/btn_signUp"
        style="@android:style/Widget.DeviceDefault.Button.Colored"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/btn_login"
        style="@android:style/Widget.DeviceDefault.Button.Colored"
        android:layout_width="316dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="308dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_custom"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="308dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_custom"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>